# shard

./: .gitignore  CMakeLists.txt  readme.md
cmake/Modules/: CodeCoverage.cmake  FindSDL2_ttf.cmake
src/core/: Game.hpp  InvalidArgumentException.cpp  InvalidArgumentException.hpp  InvalidFormatException.cpp  InvalidFormatException.hpp  Object.hpp  RNG.cpp  RNG.hpp  SimpleGame.cpp  SimpleGame.hpp  StringException.cpp  StringException.hpp  game.hpp  main.cpp  object.hpp  simplegame.cpp  simplegame.hpp
src/graphics/: ASCIIRenderable.hpp  ASCIIRenderingSystem.cpp  ASCIIRenderingSystem.hpp  CharBitmap.cpp  CharBitmap.hpp  CharBitmapLoader.cpp  CharBitmapLoader.hpp  FileASCIIRenderable.cpp  FileASCIIRenderable.hpp  NCursesRenderingSystem.cpp  NCursesRenderingSystem.hpp  Renderable.hpp  RenderableStore.hpp  TestRenderable.cpp  TestRenderable.hpp
src/graphics/ascii/: ASCIIFileRenderable.cpp  ASCIIFileRenderable.hpp  ASCIIRenderable.cpp  ASCIIRenderable.hpp  ASCIIRenderingSystem.cpp  ASCIIRenderingSystem.hpp  ASCIISingleCharacterRenderable.cpp  ASCIISingleCharacterRenderable.hpp  ASCIIWorldRenderer.cpp  ASCIIWorldRenderer.hpp
src/graphics/ascii/ncurses/: NCursesRenderingSystem.cpp  NCursesRenderingSystem.hpp
src/graphics/ascii/sdl/: SDLRenderingSystem.cpp  SDLRenderingSystem.hpp
src/input/: InputSystem.hpp  Keymap.hpp  NCursesInputSystem.cpp  NCursesInputSystem.hpp  SDLInputSystem.cpp  SDLInputSystem.hpp
src/logic/: BackgroundJob.hpp  Entity.cpp  Entity.hpp  GameObject.cpp  GameObject.hpp  Item.cpp  Item.hpp  ItemType.hpp  Job.hpp  Need.hpp  World.cpp  World.hpp  WorldUpdater.cpp  WorldUpdater.hpp
src/logic/jobs/: FindWater.cpp  FindWater.hpp  Idle.cpp  Idle.hpp  Move.cpp  Move.hpp  Wander.cpp  Wander.hpp
src/logic/jobs/background/: IncreaseThirst.cpp  IncreaseThirst.hpp  PlayerControl.cpp  PlayerControl.hpp
src/logic/needs/: Thirst.cpp  Thirst.hpp
src/logic/utility/: EntityUtils.cpp  EntityUtils.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GameObjectUtils.cpp  GameObjectUtils.hpp
src/ncurses/: ColorCache.cpp  ColorCache.hpp  NCursesEngine.cpp  NCursesEngine.hpp  NCursesException.cpp  NCursesException.hpp  NCursesInterface.cpp  NCursesInterface.hpp
src/sdl/: SDLInterface.cpp  SDLInterface.hpp  SDLTexture.cpp  SDLTexture.hpp
src/utility/: Assert.hpp  BitPattern.cpp  BitPattern.hpp  CopyablePolymorphic.hpp  DateTime.cpp  DateTime.hpp  DefaultLogger.cpp  DefaultLogger.hpp  EnumClassHash.hpp  Logger.hpp  LoggerFactory.cpp  LoggerFactory.hpp  StreamLogger.cpp  StreamLogger.hpp  Variant.cpp  Variant.hpp  VectorHash.cpp  VectorHash.hpp  defaultlogger.cpp  defaultlogger.hpp  logger.hpp
src/utility/algorithm/: Pathfinding.cpp  Pathfinding.hpp
src/utility/algorithm/pathfinding/: AStar.cpp  AStar.hpp  Pathfinding.cpp  Pathfinding.hpp
src/utility/math/: Math.cpp  Math.hpp
src/utility/math/geometry/: Box.cpp  Box.hpp
test/: NCursesTestApp.cpp  exampletest.cpp
test/graphics/: ASCIIRenderingSystemTest.cpp  CharBitmapLoaderTest.cpp  CharBitmapTest.cpp  RenderableStoreTest.cpp
test/graphics/ascii/: ASCIIRenderingSystemTest.cpp  ASCIIWorldRendererTest.cpp
test/graphics/ascii/sdl/: SDLRenderingSystemTest.cpp
test/logic/: EntityTest.cpp  GameObjectTest.cpp  LogicTestBase.hpp  ThirstTest.cpp  WorldTest.cpp  WorldUpdaterTest.cpp
test/logic/jobs/: FindWaterTest.cpp  JobTestBase.hpp  MoveTest.cpp  WanderTest.cpp
test/logic/jobs/background/: IncreaseThirstTest.cpp  PlayerControlTest.cpp
test/logic/needs/: ThirstTest.cpp
test/logic/utility/: EntityUtilsTest.cpp  GameObjectUtilsTest.cpp
test/manual/: NCursesTestApp.cpp  SDLApp.cpp
test/mocks/: MockASCIIRenderable.hpp  MockASCIIRenderingSystem.hpp  MockEntity.hpp  MockEntityUtils.hpp  MockGameObject.hpp  MockInputSystem.hpp  MockJob.hpp  MockNeed.hpp  MockRNG.hpp  MockRenderable.hpp  MockRenderableStore.hpp  MockSDLInterface.hpp  MockSDLTexture.hpp  MockWorld.hpp  TestASCIIRenderable.hpp  TestASCIIRenderingSystem.hpp  TestRenderable.hpp
test/ncurses/: ColorCacheTest.cpp
test/resources/charBitmaps/: 2x2.txt
test/templates/: TestTemplate.cpp
test/utility/: BitPatternTest.cpp  DateTimeTest.cpp  DefaultLoggerTest.cpp  StreamLoggerTest.cpp  VariantTest.cpp  VectorHashTest.cpp  defaultloggertest.cpp
test/utility/algorithm/pathfinding/: AStarTest.cpp
test/utility/math/: MathTest.cpp
test/utility/math/geometry/: BoxTest.cpp
